<resources>

    <!-- do not translate section -->

    <!--facebook credential-->
    <!--<string name="facebook_page_id">1947285772263530</string> &lt;!&ndash;Page&ndash;&gt;-->
    <string name="facebook_page_id">1456782411086723</string>   <!--Group-->
    <!--<string name="facebook_page_id">1625303304443523</string>--> <!--Public group-->
    <!--<string name="facebook_page_id">1709221795975425</string>--> <!--Private group [not support]-->

    <string name="facebook_app_id">1876378776012086</string>
    <string name="facebook_account_kit_client_token">7ec1db9bd5abcca956b15e39caed9170</string>
    <string name="facebook_account_kit_secret">941dfee8252685164282a47c18fa418b</string>


    <!-- Payment Gateway -->
    <string name="stripe_publish_key">pk_test_qXEJvHrGagl8H4qLOzAVgmw7</string>
    <string name="stripe_secret_test_key">sk_test_tBwzj4Pxw5QywD37NcjujkIn</string>

    <string name="order_sheet_id">1fobERhK6z6qVhBEpmSdgFPYz6aMV539ZQHcYZiBuCXM</string>


    <!-- ad mob credential -->
    <string name="app_ad_id">ca-app-pub-6382099871444261~9778932425</string>
    <string name="banner_ad_unit_id">ca-app-pub-6382099871444261/7164732597</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-6382099871444261/4249427662</string>

    <!-- terms and conditions, privacy policy and faq url -->
    <string name="terms_url">https://docs.google.com/document/d/e/2PACX-1vTM3_XR_tVLPFP5-Q5maOhZnKYfjVxSriWE3zi7rvr28kl7myJYcKLvWDdfkcJAxKvLNzjU_nTn5W4-/pub</string>
    <string name="privacy_url">https://docs.google.com/document/d/e/2PACX-1vQwSD8JYwbY7ez-pVwFaFtQkfOJWr0McdspMw5Q0cKAxSL4AYUJXeLXfsDPJeYdbEkSIaAn0miGNDX5/pub</string>
    <string name="faq_url">https://docs.google.com/document/d/e/2PACX-1vQZQg-db5an_DJy6WZMzPOfKCLJy1tu_QbvEKKJfs0K7tBiOdHzxegsM6b9N0i-Ip0hRwxDZrKD4HuK/pub</string>

    <!-- end of do not translate section -->

    <!--common string resources-->
    <string name="app_name">FSHOPPER</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="no_network_msg">No internet connectivity!</string>
    <string name="update">Update</string>
    <string name="search_hint_product">Type name, price</string>
    <string name="empty_list_msg">No data found!</string>

    <string name="msg_loading">Loading, please wait...</string>
    <string name="info">Info</string>
    <string name="next">Next</string>
    <string name="close">Close</string>

    <!--Drawer menu string resources-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_my_address">Address</string>
    <string name="menu_cart">Cart List</string>
    <string name="menu_wish">Wish List</string>
    <string name="menu_setting">Settings</string>

    <!--Home page-->
    <string name="see_all">MORE</string>

    <!--Payment setup -checkout/delivery-->
    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="name">Name</string>
    <string name="email">Email*</string>
    <string name="facebook_id">Facebook ID</string>
    <string name="address">Address*</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_postal">Zip/Postal</string>
    <string name="country">Country</string>
    <string name="telephone">Mobile/Telephone*</string>

    <string name="shipping_method">Shipping Method</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="office_delivery">Pickup from warehouse</string>
    <string name="warehouse_address">Warehouse address</string>

    <string name="select_payment_method">Select Payment Method</string>
    <string name="place_order">Place Order</string>

    <!--Confirmation Dialog-->
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_yes">YES</string>
    <string name="dialog_btn_no">NO</string>
    <string name="delete_wish_item">Do you want to delete this item from wish list?</string>
    <string name="delete_cart_item">Do you want to delete this item from cart list?</string>
    <!--search / advance search-->
    <string name="search_anything">Search anything</string>
    <string name="order_by">Order by</string>
    <string name="select_order">Select order</string>

    <!-- Settings activity -->
    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summary">Turn on/off notification</string>

    <!--Notification-->
    <string name="notifications">Notifications</string>
    <string name="notification_details">Notification details</string>
    <string name="placeholder">..</string>

    <string name="empty_result">No data!</string>

    <string name="support">Support</string>

    <string name="title_bank">Direct bank transfer</string>

    <string name="title_check">Check payments</string>

    <string name="title_cash_on_delivery">Cash on delivery</string>

    <string name="title_stripe">Credit Card</string>

    <string name="transaction_id">Transaction ID</string>
    <string name="order_successful_message">Your order has been successfully placed and is being verified. Thank you for purchasing from us.</string>
    <string name="order_contact_message">If needed contact with us here: +88017XX XXX XXX</string>
    <string name="order_successful">Order successful</string>
    <string name="finalize_order">Finalize order</string>

    <string name="failed">Failed</string>
    <string name="no_internet">No internet!</string>
    <string name="connect">Connect</string>
    <string name="share_text">Install best shopping application from:</string>

    <string name="type_something">Type something to search</string>
    <string name="no_notification">No notification</string>

    <string name="rate">Rate App</string>
    <string name="share">Share</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="messenger">Messenger</string>
    <string name="others">Others</string>
    <string name="email_support">Email</string>
    <string name="order">Order</string>
    <string name="order_now">Order Now</string>
    <string name="note_empty_msg">Please input order note</string>

    <string name="install_messenger">Install facebook messenger</string>
    <string name="permission_not_granted">Permission not granted!</string>

    <string name="change_representation">Change Representation</string>

    <string name="please_sign_in">PLEASE SIGN IN WITH</string>
    <string name="empty_wish_list">Your wish list is empty</string>
    <string name="empty">Empty</string>

    <string name="total_orders">Total Orders</string>
    <string name="reviews">Reviews</string>
    <string name="no_comment">No comment</string>
    <string name="comments">Comments</string>

    <string name="terms">Terms and Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="faq">FAQ</string>

    <string name="cancelled">Cancelled</string>

    <string name="successfully_updated">Successfully updated</string>
    <string name="address_validation">Please fill all the required fields</string>
    <string name="get_started">GET STARTED </string>
    <string name="welcome_back">WELCOME BACK!</string>

    <string name="sell_item">SELL ITEMS</string>
    <string name="post_item">POSTS</string>
    <string name="popular_item">POPULARS</string>
    <string name="order_note">Type your order note here (i.e.: Size, Color, Specification, Variation or other product attributes)</string>

    <!-- TODO: Issues: multidex problem, private group error, android ago, add date-time in order-->

</resources>
