<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_my_address"
        android:icon="@drawable/ic_address"
        android:title="@string/menu_my_address" />

    <item
        android:id="@+id/action_wish"
        android:icon="@drawable/ic_menu_wishlist"
        android:title="@string/menu_wish" />


    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/action_call"
                android:icon="@drawable/ic_call_gray"
                android:title="@string/call" />

            <item
                android:id="@+id/action_message"
                android:icon="@drawable/ic_message_gray"
                android:title="@string/message" />

            <item
                android:id="@+id/action_messenger"
                android:icon="@drawable/ic_messenger"
                android:title="@string/messenger" />

            <item
                android:id="@+id/action_email"
                android:icon="@drawable/ic_menu_email"
                android:title="@string/email_support" />

        </menu>
    </item>

    <item android:title="@string/others">
        <menu>

            <item
                android:id="@+id/terms_conditions"
                android:icon="@drawable/ic_terms_conditions"
                android:title="@string/terms" />

            <item
                android:id="@+id/privacy_policy"
                android:icon="@drawable/ic_privacy_policy"
                android:title="@string/privacy" />

            <item
                android:id="@+id/faq"
                android:icon="@drawable/ic_faq"
                android:title="@string/faq" />

            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

            <item
                android:id="@+id/action_rate_app"
                android:icon="@drawable/ic_menu_rating"
                android:title="@string/rate" />

            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_setting" />


        </menu>
    </item>

</menu>
