<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="5dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_margin_15dp">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/name"
            android:paddingLeft="@dimen/pad_margin_10dp"
            android:paddingRight="@dimen/pad_margin_10dp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_margin_15dp">

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/telephone"
            android:paddingLeft="@dimen/pad_margin_10dp"
            android:paddingRight="@dimen/pad_margin_10dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_margin_15dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/pad_margin_10dp"
            android:paddingRight="@dimen/pad_margin_10dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_margin_15dp">

        <EditText
            android:id="@+id/et_facebook_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/facebook_id"
            android:paddingLeft="@dimen/pad_margin_10dp"
            android:paddingRight="@dimen/pad_margin_10dp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_margin_15dp">

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:minLines="4"
            android:paddingLeft="@dimen/pad_margin_10dp"
            android:paddingRight="@dimen/pad_margin_10dp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_margin_15dp">

        <EditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/city"
            android:paddingLeft="@dimen/pad_margin_10dp"
            android:paddingRight="@dimen/pad_margin_10dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_margin_15dp">

        <EditText
            android:id="@+id/et_state"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/state"
            android:paddingLeft="@dimen/pad_margin_10dp"
            android:paddingRight="@dimen/pad_margin_10dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_margin_15dp">

        <EditText
            android:id="@+id/et_postal_code"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/zip_postal"
            android:paddingLeft="@dimen/pad_margin_10dp"
            android:paddingRight="@dimen/pad_margin_10dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_margin_15dp">

        <EditText
            android:id="@+id/et_country"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/country"
            android:paddingLeft="@dimen/pad_margin_10dp"
            android:paddingRight="@dimen/pad_margin_10dp" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
