<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lytContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lyt_name_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:weightSum="1.0">


        <com.mcc.fshopper.view.MontserratTextView
            android:id="@+id/tvProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/pad_margin_5dp"
            android:layout_weight=".70"
            android:paddingRight="5dp"
            android:textColor="@color/product_name_color"
            android:textSize="17sp" />

        <com.mcc.fshopper.view.MontserratTextView
            android:id="@+id/tvSalesPrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/pad_margin_5dp"
            android:layout_weight=".30"
            android:gravity="end"
            android:textColor="@color/btnMain"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/lyt_name_price"
        android:layout_marginTop="@dimen/pad_margin_10dp"
        android:background="@color/detailsBoarder" />

    <LinearLayout
        android:id="@+id/lyt_price_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <RelativeLayout
            android:id="@+id/lytLikeCounter"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight=".40"
            android:gravity="center_vertical"
            android:paddingEnd="5dp">

            <ImageView
                android:id="@+id/iv_like"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_fb_like" />

            <com.mcc.fshopper.view.RobotoTextView
                android:id="@+id/tvLikeCounter"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_toRightOf="@+id/iv_like"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="0"
                android:textColor="@color/btnMain"
                android:textSize="@dimen/txt_size_12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <com.github.curioustechizen.ago.RelativeTimeTextView
            android:id="@+id/tvTimeStamp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".60"
            android:gravity="end|center_vertical"
            android:maxLines="1"
            android:text="Uploaded 3 days ago"
            android:textColor="@color/btnMain"
            android:textSize="12sp"
            app:relative_time_prefix="Uploaded " />

    </LinearLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/lyt_price_time"
        android:background="@color/detailsBoarder" />

    <WebView
        android:id="@+id/wvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="@dimen/pad_margin_10dp"
        android:background="@android:color/transparent"
        android:scrollbarSize="0dp"
        android:scrollbarStyle="insideOverlay" />

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/wvDescription"
        android:layout_marginTop="5dp"
        android:background="@color/detailsBoarder" />

    <RelativeLayout
        android:id="@+id/lytPostComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line3"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/pad_margin_10dp">

        <com.mcc.fshopper.view.RobotoTextView
            android:id="@+id/textComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:textColor="@color/product_name_color"
            android:textSize="16sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textComment"
            android:layout_marginTop="5dp"
            android:nestedScrollingEnabled="false" />

        <TextView
            android:id="@+id/emptyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textComment"
            android:layout_marginTop="10dp"
            android:text="@string/no_comment"
            android:textSize="12dp" />

    </RelativeLayout>


    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/lytPostComment"
        android:layout_marginTop="@dimen/pad_margin_10dp"
        android:background="@color/detailsBoarder" />

    <LinearLayout
        android:id="@+id/ll_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line4"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:weightSum="1.0">

        <com.mcc.fshopper.view.MontserratTextView
            android:id="@+id/tv_contact_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".50"
            android:textColor="@color/btnMain"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="@dimen/height_width_0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:gravity="end"
            android:orientation="horizontal">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/pad_margin_10dp"
                android:src="@drawable/ic_sms"
                app:elevation="0dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_call"
                app:elevation="0dp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/ll_contact"
        android:background="@color/detailsBoarder" />

    <LinearLayout
        android:id="@+id/lyt_order_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line5"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_order_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_note"
            android:minLines="4"
            android:paddingLeft="@dimen/pad_margin_10dp"
            android:paddingRight="@dimen/pad_margin_10dp"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/order_view"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@+id/lyt_order_note"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/btn_messenger"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight=".5"
            android:background="@drawable/btn_blue"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/pad_margin_10dp"
                android:src="@drawable/ic_messenger_now" />

            <com.mcc.fshopper.view.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/messenger"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight=".5"
            android:background="@drawable/btn_blue"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/pad_margin_10dp"
                android:src="@drawable/ic_order_now" />

            <com.mcc.fshopper.view.RobotoTextView
                android:id="@+id/tv_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/order"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
